trunk/Archive2/f8/0bf64057c9e83c/output
main.cpp:109:5: error: static_assert failed "Invalid container type"
    static_assert(Concept<HasBegin(ContainerType)>
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:138:10: note: in instantiation of function template specialization 'sort<B>' requested here
    B b; sort(b);
         ^
1 error generated.
